# rust-de-specialization

./: .gitignore  .pmat-gates.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SEQUENCE.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  coverage.yml
capstones/: c01-capstone-reading.md  c01-capstone.md  c02-capstone.md  c03-capstone-reading.md  c03-capstone.md  c04-capstone.md  c05-capstone.md  c06-capstone.md  c07-capstone.md
config/edl/c1-rust-from-zero/: playground-cache.json
contracts/: binding.yaml  c1-l111-memory-safety-v1.yaml  c1-l111-playground-v1.yaml  c1-l211-ownership-v1.yaml  c1-l211-playground-v1.yaml  c1-l212-move-copy-clone-v1.yaml  c1-l212-playground-v1.yaml  c1-l232-playground-v1.yaml  c1-l232-result-question-v1.yaml  c1-l331-closures-v1.yaml  c1-l331-playground-v1.yaml  c1-l332-iterators-v1.yaml  c1-l332-playground-v1.yaml  fruit-analytics-v1.yaml  fruit-etl-v1.yaml  fruit-inventory-v1.yaml  fruit-orders-v1.yaml  fruit-parser-v1.yaml  fruit-pipeline-v1.yaml  fruit-warehouse-v1.yaml
demos/c1-rust-from-zero/: Cargo.toml
demos/c1-rust-from-zero/src/: l111_memory_safety.rs  l211_ownership.rs  l212_move_copy_clone.rs  (+5 more)
demos/c2-sqlite-rust/: Cargo.toml
demos/c3-etl-pipelines/: Cargo.toml
demos/c4-sql-databases/: Cargo.toml
demos/c4-sql-databases/src/: lib.rs  main.rs
demos/c5-polars/: Cargo.toml
demos/c5-polars/src/: lib.rs  main.rs
demos/c6-duckdb/: Cargo.toml
demos/c7-provable-contracts/: Cargo.toml
(+8 files in other folders)
