[package]
name = "c4-sql-databases"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Course 4: Async SQL with sqlx, pooling, migrations, transactions"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = { workspace = true }
